# hello_actix_rusoto

./: Cargo.toml  docker-compose.yaml
src/: main.rs
