[package]
name = "hello_actix_rusoto"
version = "0.1.0"
authors = ["Matt Roberts <mattroberts297@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# DynamoDB
rusoto_core = "0.46"
rusoto_dynamodb = "0.46"
serde_dynamodb = "0.7.0"
actix-web = "4.0.0-beta.1"
actix-rt = "=2.0.0-beta.2"
actix-service = "=2.0.0-beta.3"
